--- a/app/assets/manage-user.html
+++ b/app/assets/manage-user.html
@@ -59,6 +59,11 @@
                     <i class="icon-remove pull-right" onclick="close_createEntity()"></i>
                     <input type="text" id="creat-newEntity" onkeyup="create_Userentity(event)"/>
                 </div>
+                <div class="absolute creat-entity-block hide" id="edit-block">
+                    <p>修改</p>
+                    <i class="icon-remove pull-right" onclick="close_editBlock()"></i>
+                    <input type="text" id="change-leftNavi" onkeyup="change_leftNavi(event)"/>
+                </div>
             </ul>
         </div>
 
