--- a/app/assets/login.html
+++ b/app/assets/login.html
@@ -17,9 +17,15 @@
         <!--<li><a >Hello Wayne</a></li>-->
         <!--</ul>-->
     </div>
-    <div class="page-navi clearfix">
-      <h3 class="text-center">登录</h3>
+
+
+    <div class="page-navi login-pageNavi relative">
+      <h3>登录</h3>
+      <a class="btn btn-wzx btn-primary absolute">注册</a>
     </div>
+
+
+
     <div class="login-sub-middle clearfix">
         <form class="login-form">
             <div id="error_explanation" class="error_explanation ">
