--- a/app/assets/login.html
+++ b/app/assets/login.html
@@ -21,7 +21,7 @@
 
     <div class="page-navi login-pageNavi relative">
       <h3>登录</h3>
-      <a class="btn btn-wzx btn-primary absolute">注册</a>
+      <a class="btn btn-wzx btn-primary" href>注册</a>
     </div>
 
 
