--- a/app/assets/register.html
+++ b/app/assets/register.html
@@ -17,8 +17,9 @@
         <!--<li><a >Hello Wayne</a></li>-->
         <!--</ul>-->
     </div>
-    <div class="page-navi clearfix">
-        <h3 class="text-center">登录</h3>
+    <div class="page-navi login-pageNavi relative">
+        <h3>注册</h3>
+        <a class="btn btn-wzx btn-primary" href>登陆</a>
     </div>
     <div class="login-sub-middle clearfix">
         <form class="login-form">
