--- a/app/assets/add-manage-user.html
+++ b/app/assets/add-manage-user.html
@@ -95,6 +95,7 @@
                 <input type="radio" name="optionsRadios" data-role="3">
                 role,dasdsadasdasasaSAsaSAsaSASASAsASas
             </label>
+            <input class="btn btn-wzx btn-primary" type="submit" />
             <p class="hide text-center text-warning" id="add-warn"></p>
         </div>
 
