--- a/app/assets/delivery-kpi.html
+++ b/app/assets/delivery-kpi.html
@@ -72,12 +72,14 @@
              </select>
             <br />
             <p class="inline">KPI:</p>
+            <div id=‘kpi-select’ class="inline">
             <select class="delivery-kpi" id="delivery-kpi">
                 <option value="1">全部</option>
                 <option value="2">KPI1</option>
                 <option value="3">KPI2</option>
                 <option value="4">KPI3</option>
             </select>
+            </div>
             <a class="btn btn-wzx btn-primary pull-right" onclick="delivery_Kpi()">分配</a>
         </div>
         <h3 class="normal-blue text-center delivery-mykpiMark">该用户的KPI</h3>
