--- a/app/assets/manage-entitygroup.html
+++ b/app/assets/manage-entitygroup.html
@@ -94,7 +94,7 @@
                     <option value="3">entity2</option>
                     <option value="4">entity3</option>
                 </select>
-                <a class="btn btn-wzx btn-primary pull-right" onclick="delivery_view()">分配</a>
+                <a class="btn btn-wzx btn-primary pull-right" onclick="delivery_view()">分配组织</a>
             </div>
             <h3 class="normal-blue text-center delivery-mykpiMark">该观察点下的用户组</h3>
             <table class="manage-kpi" id="kpi-table">
