--- a/app/assets/template.html
+++ b/app/assets/template.html
@@ -41,14 +41,16 @@
               </ul>
               <a class="btn btn-success btn-navi pull-right" href="">KPI Entry</a>
           </div>
-          <div class="sub-middle">
-              <div class="sub-middle-tool pull-right">
-                  <a><i class="icon-print"></i> </a>
-                  <a><i class="icon-share-alt"></i> Excel</a>
-                  <a><i class="icon-share-alt"></i> PDF</a>
-              </div>
+          <!--<div class="sub-middle">-->
+              <!--<div class="sub-middle-tool pull-right">-->
+                  <!--<a><i class="icon-print"></i> </a>-->
+                  <!--<a><i class="icon-share-alt"></i> Excel</a>-->
+                  <!--<a><i class="icon-share-alt"></i> PDF</a>-->
+              <!--</div>-->
+          <!--</div>-->
+          <div class="middle clearfix startup-middle">
+                  <img src="images/naviPage.png" style="display:table;margin:0 auto"/>
           </div>
-
       </div>
       <script src="javascripts/jquery-1.8.2.min.js"></script>
       <script src="javascripts/jquery-ui-1.10.3.custom.min.js"></script>
