--- a/app/assets/dashboard.html
+++ b/app/assets/dashboard.html
@@ -97,7 +97,8 @@
             <div class="choose-db-item db-chart-column pull-left" onclick="dashNew_chooseType(event)"><label>直方图</label></div>
             <div class="choose-db-item db-chart-pie pull-left" onclick="dashNew_chooseType(event)"><label>饼图</label></div>
         </div>
-        <a class="btn btn-wzx btn-primary dashboard-condition-btn">分析</a>
+        <a class="btn dashboard-condition-btn">取消</a>
+        <a class="btn btn-primary dashboard-condition-btn">添加</a>
     </div>
     <div class="middle clearfix">
         <!--左边的categories-->
