--- a/app/assets/dashboard.html
+++ b/app/assets/dashboard.html
@@ -59,14 +59,12 @@
                     <label class="chart-leftMark-view">观察点</label>
                 </div>
                 <select class="pull-left conditionPart-group" id="chart-group" origin="全部">
-                    <option style="display:none" selected="selected" id="none-group">类别</option>
                     <option value="group0">全部</option>
                     <option value="group1">entity1</option>
                     <option value="group2">entity2</option>
                     <option value="group3">entity3</option>
                 </select>
                 <select class="pull-left" id="chart-kpi">
-                    <option style="display:none" selected="selected" id="none-kpi">选择KPI</option>
                     <option value="kpi1" interval="200">week</option>
                     <option value="kpi2" interval="400">quarter</option>
                     <option value="kpi3" interval="300">month</option>
@@ -74,7 +72,6 @@
                 </select>
                 <span class="inline pull-left">-</span>
                 <select class="pull-left conditionPart-entity" id="chart-view">
-                    <option style="display:none" selected="selected" id="none-view">选择观察组</option>
                     <option value="entity1">view1</option>
                     <option value="entity2">view2</option>
                     <option value="entity3">view3</option>
@@ -97,8 +94,11 @@
             <div class="choose-db-item db-chart-column pull-left" onclick="dashNew_chooseType(event)"><label>直方图</label></div>
             <div class="choose-db-item db-chart-pie pull-left" onclick="dashNew_chooseType(event)"><label>饼图</label></div>
         </div>
-        <a class="btn dashboard-condition-btn">取消</a>
-        <a class="btn btn-primary dashboard-condition-btn">添加</a>
+
+        <div class="chooseChart-wrap clearfix">
+            <a class="btn btn-primary dashboard-condition-btn pull-right">添加</a>
+            <a class="btn dashboard-condition-btn pull-right" onclick="close_dash()">取消</a>
+        </div>
     </div>
     <div class="middle clearfix">
         <!--左边的categories-->
@@ -139,8 +139,23 @@
             </ul>
         </div>
 
-        <div>
+        <div class="pull-left dashboard-block">
             <a class="btn btn-wzx btn-primary dashboard-addNew-btn" onclick="showDash_new()"><i class="icon-plus icon-white"></i> 视图</a>
+            <ul class="dashBoard-show">
+                <li>
+                    <div class="dashboard-eachDetail relative">
+                        <p class="text-center">title</p>
+                        <div class="dashboard-moreDetail">
+                            <p>da</p>
+                            <p>2013.4</p>
+                        </div>
+                    </div>
+                    <div>
+
+                    </div>
+                </li>
+                <li></li>
+            </ul>
         </div>
 
 
