--- a/app/assets/dashboard.html
+++ b/app/assets/dashboard.html
@@ -187,8 +187,12 @@
                             </tr>
                         </table>
                     </div>
-                    <div>
 
+                    <!--<div class="db-chartItem">-->
+                          <!--放表格的-->
+                    <!--</div>-->
+                    <div class="db-placeHolder">
+                        <h2>放置视图</h2>
                     </div>
                 </li>
                 <li></li>
