--- a/app/assets/template.html
+++ b/app/assets/template.html
@@ -49,7 +49,10 @@
               <!--</div>-->
           <!--</div>-->
           <div class="middle clearfix startup-middle">
-                  <img src="images/naviPage.png" style="display:table;margin:0 auto"/>
+              <div style="width:880px;position:relative;margin-left:-440px;left:50%;">
+                  <img src="images/naviPage.png"/>
+              </div>
+
           </div>
       </div>
       <script src="javascripts/jquery-1.8.2.min.js"></script>
