--- a/app/assets/dashboard.html
+++ b/app/assets/dashboard.html
@@ -48,45 +48,80 @@
     <div class="dashBlock " id="addBlock" data-state="off" style="display:none">
         <h4 class="text-center light-gray">创建视图</h4>
         <div class="content-condition clearfix dashBoard-condition">
-            <div class="pull-left dashboard-conditionn-name">
-                <label>视图名称</label>
-                <input type="text" />
+             <label class="inline-block">*视图名称</label>
+             <input type="text" />
+             <br />
+            <label class="inline-block">描述</label>
+            <input type="text" />
+            <br />
+            <label class="inline-block">KPI类别</label>
+            <select class=" conditionPart-group" id="chart-group" origin="全部">-->
+                <option value="group0">全部</option>
+                <option value="group1">entity1</option>
+                <option value="group2">entity2</option>
+                <option value="group3">entity3</option>
+                </select>
+            <br />
+            <label class="inline-block">*KPI名称</label>
+            <select class="" id="chart-kpi">
+            <option value="kpi1" interval="200">week</option>
+            <option value="kpi2" interval="400">quarter</option>
+            <option value="kpi3" interval="300">month</option>
+            <option value="kpi3" interval="500">year</option>
+            </select>
+            <br />
+            <label class="inline-block">*观察点</label>
+            <select class=" conditionPart-entity" id="chart-view">
+            <option value="entity1">view1</option>
+            <option value="entity2">view2</option>
+            <option value="entity3">view3</option>
+            </select>
+            <br />
+            <label class="inline-block">*开始时间</label>
+            <input type="text" readonly="true" id="from" />
+            <input placeholder="时间" type="text" readonly="true" id="fromTime" class="analytics-time"/>
+            <br />
+            <label class="inline-block">*结束时间</label>
+            <input  type="text" readonly="true" id="to" />
+            <input placeholder="时间" type="text" readonly="true" id="toTime" class="analytics-time"/>
+                <!--<label>视图名称</label>-->
+                <!--<input type="text" />-->
 
-            </div>
-            <div class="content-condition-part content-condition-leftpart pull-left">
-                <div class="chart-leftMark">
-                    <label>类别</label>
-                    <label>KPI</label>
-                    <label class="chart-leftMark-view">观察点</label>
-                </div>
-                <select class="pull-left conditionPart-group" id="chart-group" origin="全部">
-                    <option value="group0">全部</option>
-                    <option value="group1">entity1</option>
-                    <option value="group2">entity2</option>
-                    <option value="group3">entity3</option>
-                </select>
-                <select class="pull-left" id="chart-kpi">
-                    <option value="kpi1" interval="200">week</option>
-                    <option value="kpi2" interval="400">quarter</option>
-                    <option value="kpi3" interval="300">month</option>
-                    <option value="kpi3" interval="500">year</option>
-                </select>
-                <span class="inline pull-left">-</span>
-                <select class="pull-left conditionPart-entity" id="chart-view">
-                    <option value="entity1">view1</option>
-                    <option value="entity2">view2</option>
-                    <option value="entity3">view3</option>
-                </select>
-            </div>
+            <!--</div>-->
+            <!--<div class="content-condition-part content-condition-leftpart pull-left">-->
+                <!--<div class="chart-leftMark">-->
+                    <!--<label>类别</label>-->
+                    <!--<label>KPI</label>-->
+                    <!--<label class="chart-leftMark-view">观察点</label>-->
+                <!--</div>-->
+                <!--<select class="pull-left conditionPart-group" id="chart-group" origin="全部">-->
+                    <!--<option value="group0">全部</option>-->
+                    <!--<option value="group1">entity1</option>-->
+                    <!--<option value="group2">entity2</option>-->
+                    <!--<option value="group3">entity3</option>-->
+                <!--</select>-->
+                <!--<select class="pull-left" id="chart-kpi">-->
+                    <!--<option value="kpi1" interval="200">week</option>-->
+                    <!--<option value="kpi2" interval="400">quarter</option>-->
+                    <!--<option value="kpi3" interval="300">month</option>-->
+                    <!--<option value="kpi3" interval="500">year</option>-->
+                <!--</select>-->
+                <!--<span class="inline pull-left">-</span>-->
+                <!--<select class="pull-left conditionPart-entity" id="chart-view">-->
+                    <!--<option value="entity1">view1</option>-->
+                    <!--<option value="entity2">view2</option>-->
+                    <!--<option value="entity3">view3</option>-->
+                <!--</select>-->
+            <!--</div>-->
 
-            <div class="content-condition-part pull-right content-condition-rightpart">
-                <p class="text-center">日期范围</p>
-                <input type="text" readonly="true" id="from" />
-                <input placeholder="时间" type="text" readonly="true" id="fromTime" class="analytics-time"/>
-                <span>to</span>
-                <input  type="text" readonly="true" id="to" />
-                <input placeholder="时间" type="text" readonly="true" id="toTime" class="analytics-time"/>
-            </div>
+            <!--<div class="content-condition-part pull-right content-condition-rightpart">-->
+                <!--<p class="text-center">日期范围</p>-->
+                <!--<input type="text" readonly="true" id="from" />-->
+                <!--<input placeholder="时间" type="text" readonly="true" id="fromTime" class="analytics-time"/>-->
+                <!--<span>to</span>-->
+                <!--<input  type="text" readonly="true" id="to" />-->
+                <!--<input placeholder="时间" type="text" readonly="true" id="toTime" class="analytics-time"/>-->
+            <!--</div>-->
 
         </div>
         <div class="chooseChart-wrap clearfix">
