--- a/app/assets/Analytics.html
+++ b/app/assets/Analytics.html
@@ -71,6 +71,7 @@
                     <select class="pull-left" id="chart-kpi">
                         <option style="display:none" selected="selected" id="none-kpi">选择KPI</option>
                         <option value="kpi1" interval="200">week</option>
+                        <option value="kpi1" interval="90">hour</option>
                         <option value="kpi2" interval="400">quarter</option>
                         <option value="kpi3" interval="300">month</option>
                         <option value="kpi3" interval="500">year</option>
