--- a/app/assets/Analytics.html
+++ b/app/assets/Analytics.html
@@ -62,14 +62,14 @@
                         <label class="chart-leftMark-view">观察点</label>
                     </div>
                     <select class="pull-left conditionPart-group" id="chart-group" origin="全部">
-                        <option style="display:none" selected="selected" id="none-group">类别</option>
+                        <!--<option style="display:none" selected="selected" id="none-group">类别</option>-->
                         <option value="group0">全部</option>
                         <option value="group1">entity1</option>
                         <option value="group2">entity2</option>
                         <option value="group3">entity3</option>
                     </select>
                     <select class="pull-left" id="chart-kpi">
-                        <option style="display:none" selected="selected" id="none-kpi">选择KPI</option>
+                        <!--<option style="display:none" selected="selected" id="none-kpi">选择KPI</option>-->
                         <option value="kpi1" interval="200">week</option>
                         <option value="kpi1" interval="90">hour</option>
                         <option value="kpi2" interval="400">quarter</option>
@@ -78,7 +78,7 @@
                     </select>
                     <span class="inline pull-left">-</span>
                     <select class="pull-left conditionPart-entity" id="chart-view">
-                        <option style="display:none" selected="selected" id="none-view">选择观察组</option>
+                        <!--<option style="display:none" selected="selected" id="none-view">选择观察组</option>-->
                         <option value="entity1">view1</option>
                         <option value="entity2">view2</option>
                         <option value="entity3">view3</option>
