--- a/app/assets/manage-kpi.html
+++ b/app/assets/manage-kpi.html
@@ -153,9 +153,9 @@
                         <input type="checkbox" class="is-calcu-check" id="is-calcu-check" onclick="is_calcu()"/>
                         <div class="is-calcu-type clearfix" id="is-calcu-type" style="display:none">
                             <select id="is-calcu-relate" class="calcuRelate-kpi" onchange="select_calcuRelate()">
-                                <option data-order="1" class="empty-option" selected="selected"> </option>
-                                <option data-order="2" id="k1">KPI 1</option>
-                                <option data-order="3" id="k2">KPI 2</option>
+                                <option value="1" class="empty-option" selected="selected"> </option>
+                                <option value="2" id="k1">KPI1</option>
+                                <option value="3" id="k2">KPI2</option>
                             </select>
                             <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="1" onclick="select_calcuMethod(event)">+</a>
                             <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="2" onclick="select_calcuMethod(event)">-</a>
