--- a/app/assets/login.html
+++ b/app/assets/login.html
@@ -41,10 +41,17 @@
             <input type="text" />
             <label>密码</label>
             <input type="password" />
-            <input type="submit" value="登录" class="btn btn-wzx btn-success pull-right"/>
+            <input type="submit" value="登录" class="btn btn-wzx btn-success pull-right" />
             <p class="normal-blue">asdasdasd</p>
         </form>
     </div>
+    <a onclick="MessageBox('asdasd','message-correct')">asdasd</a>
+
+    <div class="message-box hide" id="MessageBox">
+        <p class="text-center">dadasdas</p>
+    </div>
+
+
 
 
 </div>
