--- a/app/assets/manage-kpi.html
+++ b/app/assets/manage-kpi.html
@@ -157,10 +157,10 @@
                                 <option value="2" id="k1">KPI1</option>
                                 <option value="3" id="k2">KPI2</option>
                             </select>
-                            <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="1" onclick="select_calcuMethod(event)">+</a>
-                            <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="2" onclick="select_calcuMethod(event)">-</a>
-                            <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="3" onclick="select_calcuMethod(event)">x</a>
-                            <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="4" onclick="select_calcuMethod(event)">%</a>
+                            <a class="pull-left btn btn-primary calcuType-method-btn" sign="+" data-calcuType="1" onclick="select_calcuMethod(event)">+</a>
+                            <a class="pull-left btn btn-primary calcuType-method-btn" sign="-" data-calcuType="2" onclick="select_calcuMethod(event)">-</a>
+                            <a class="pull-left btn btn-primary calcuType-method-btn" sign="*" data-calcuType="3" onclick="select_calcuMethod(event)">x</a>
+                            <a class="pull-left btn btn-primary calcuType-method-btn" sign="/" data-calcuType="4" onclick="select_calcuMethod(event)">/</a>
                             <input type="text" class="calcuType-input" id="calcuType-input" onkeyup="calcuInput(event)"/>
                             <a class="btn calcuType-clear" id="calcuType-clear" onclick="calcuRelate_clear()">清空</a>
                             <div style="display:none" id="takeCal" cal></div>
