--- a/app/assets/template.html
+++ b/app/assets/template.html
@@ -8,19 +8,34 @@
 </head>
 <body>
 <header>
-    <div class="user-portrait-background">
+    <div class="user-portrait-background pull-left">
         <div class="user-portrait-brand">
             <p>IntelligiantFactory</p>
             <p>EPM</p>
         </div>
     </div>
-    <nav>
+    <nav class="pull-left">
         <ul>
-            <li><a href="">Get Started</a></li>
-            <li><a href="">DashBoard</a></li>
-            <li><a href="">Analytics</a></li>
-            <li><a href="">Reports</a></li>
-            <li><a href="">Entry KPIs</a></li>
+            <li><a>
+                <span></span>
+                <span>Get Started</span>
+            </a></li>
+            <li><a>
+                <span></span>
+                <span>DashBoard</span>
+            </a></li>
+            <li><a>
+                <span></span>
+                <span>Analytics</span>
+            </a></li>
+            <li><a>
+                <span></span>
+                <span>Reports</span>
+            </a></li>
+            <li><a>
+                <span></span>
+                <span>Entry KPIs</span>
+            </a></li>
 
         </ul>
     </nav>
