--- a/app/assets/manage-kpi.html
+++ b/app/assets/manage-kpi.html
@@ -157,12 +157,17 @@
                                 <option value="2" id="k1">KPI1</option>
                                 <option value="3" id="k2">KPI2</option>
                             </select>
+
+                            <div  class="clearfix wrap-calcuType-method-btn">
                             <a class="pull-left btn btn-primary calcuType-method-btn" sign="+" data-calcuType="1" onclick="select_calcuMethod(event)">+</a>
                             <a class="pull-left btn btn-primary calcuType-method-btn" sign="-" data-calcuType="2" onclick="select_calcuMethod(event)">-</a>
                             <a class="pull-left btn btn-primary calcuType-method-btn" sign="*" data-calcuType="3" onclick="select_calcuMethod(event)">x</a>
                             <a class="pull-left btn btn-primary calcuType-method-btn" sign="/" data-calcuType="4" onclick="select_calcuMethod(event)">/</a>
+                            <a class="pull-left btn btn-primary calcuType-method-btn" sign="[" data-calcuType="5" onclick="select_calcuMethod(event)">[</a>
+                            <a class="pull-left btn btn-primary calcuType-method-btn" sign="]" data-calcuType="6" onclick="select_calcuMethod(event)">]</a>
+                            </div>
                             <input type="text" class="calcuType-input" id="calcuType-input" onkeyup="calcuInput(event)"/>
-                            <a class="btn calcuType-clear" id="calcuType-clear" onclick="calcuRelate_clear()">清空</a>
+                            <a class="btn calcuType-clear pull-left" id="calcuType-clear" onclick="calcuRelate_clear()">清空</a>
                             <div style="display:none" id="takeCal" cal></div>
                         </div>
                     </td>
