--- a/app/assets/manage-kpi.html
+++ b/app/assets/manage-kpi.html
@@ -163,8 +163,8 @@
                             <a class="pull-left btn btn-primary calcuType-method-btn" sign="-" data-calcuType="2" onclick="select_calcuMethod(event)">-</a>
                             <a class="pull-left btn btn-primary calcuType-method-btn" sign="*" data-calcuType="3" onclick="select_calcuMethod(event)">x</a>
                             <a class="pull-left btn btn-primary calcuType-method-btn" sign="/" data-calcuType="4" onclick="select_calcuMethod(event)">/</a>
-                            <a class="pull-left btn btn-primary calcuType-method-btn" sign="[" data-calcuType="5" onclick="select_calcuMethod(event)">[</a>
-                            <a class="pull-left btn btn-primary calcuType-method-btn" sign="]" data-calcuType="6" onclick="select_calcuMethod(event)">]</a>
+                            <a class="pull-left btn btn-primary calcuType-method-btn" sign="(" data-calcuType="5" onclick="select_calcuMethod(event)">(</a>
+                            <a class="pull-left btn btn-primary calcuType-method-btn" sign=")" data-calcuType="6" onclick="select_calcuMethod(event)">)</a>
                             </div>
                             <input type="text" class="calcuType-input" id="calcuType-input" onkeyup="calcuInput(event)"/>
                             <a class="btn calcuType-clear pull-left" id="calcuType-clear" onclick="calcuRelate_clear()">清空</a>
