--- a/app/assets/template.html
+++ b/app/assets/template.html
@@ -9,10 +9,7 @@
 <body>
 <header>
     <div class="user-portrait-background pull-left">
-        <div class="user-portrait-brand">
-            <p>IntelligiantFactory</p>
-            <p>EPM</p>
-        </div>
+        <div class="user-portrait-brand"></div>
     </div>
     <nav class="pull-left">
         <ul>
