new version template

--- a/app/assets/template.html
+++ b/app/assets/template.html
@@ -10,28 +10,29 @@
 <header>
     <div class="user-portrait-background pull-left">
         <div class="user-portrait-brand"></div>
+        <div class="user-portrait-name">IF-EPM</div>
     </div>
     <nav class="pull-left">
         <ul>
             <li><a>
-                <span></span>
                 <span>Get Started</span>
+                <span class="nav-get-started"></span>
             </a></li>
             <li><a>
-                <span></span>
                 <span>DashBoard</span>
+                <span class="nav-dash-board"></span>
             </a></li>
             <li><a>
-                <span></span>
                 <span>Analytics</span>
+                <span class="nav-analytics"></span>
             </a></li>
             <li><a>
-                <span></span>
                 <span>Reports</span>
+                <span class='nav-report'></span>
             </a></li>
             <li><a>
-                <span></span>
                 <span>Entry KPIs</span>
+                <span class="nav-entry-kpi"></span>
             </a></li>
 
         </ul>
