--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <link href="stylesheets/wayne_sunny.css" rel="stylesheet">
     <link href="stylesheets/epm_base.css" rel="stylesheet">
+    <link href="stylesheets/Analytic-chosen.css" rel="stylesheet">
+    <link href="stylesheets/Analytic-main.css" rel="stylesheet">
     <title>if kpi</title>
 </head>
 <body>
@@ -56,10 +58,47 @@
             </ul>
         </nav>
     </header>
+    <div>
+        <div class="analytics-condition clearfix">
+            <div class="analytics-mark pull-left">
+                <h2 class="normal-blue text-center">Analytics</h2>
+            </div>
+            <div class="pull-left analytics-condition-choose">
+                <select data-placeholder="entity" style="width:90px;" class="chosen-select" id="chart-group">
+                    <option value=""> </option>
+                    <option value="group1">entity1</option>
+                    <option value="group2">entity2</option>
+                    <option value="group3">entity3</option>
+                </select>
+                <select data-placeholder="kpi" style="width:150px;" class="chosen-select" id="chart-kpi">
+                    <option value=""> </option>
+                    <option value="kpi1" interval="200">week</option>
+                    <option value="kpi1" interval="90">hour</option>
+                    <option value="kpi2" interval="400">quarter</option>
+                    <option value="kpi3" interval="300">month</option>
+                    <option value="kpi3" interval="500">year</option>
+                </select>
+                <select data-placeholder="view" style="width:150px;" class="chosen-select" id="chart-view">
+                    <option value=""> </option>
+                    <option value="entity1">view1</option>
+                    <option value="entity2">view2</option>
+                    <option value="entity3">view3</option>
+                </select>
+
+            </div>
+        </div>
+    </div>
 </article>
 <script src="javascripts/jquery-1.8.2.min.js"></script>
 <script src="javascripts/jquery-ui-1.10.3.custom.min.js"></script>
+<script src="javascripts/chosen.jquery.min.js"></script>
 <script src="javascripts/wayne-base.js"></script>
 <script src="javascripts/Template.js"></script>
+<script src="javascripts/Analytics_init.js"></script>
+<script>
+    $(document).ready(function(){
+        init_analytics()
+    })
+</script>
 </body>
 </html>
