--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -106,7 +106,7 @@
                         Average
                     </label>
                 </div>
-                <a class="btn btn-primary btn-normal" style="margin-top:14px">add chart</a>
+                <a class="btn btn-primary btn-normal pull-left" style="margin-top:14px">add chart</a>
             </div>
         </div>
     </div>
